Use Java scripts and the supported DreamBot source API