@@ -7,44 +7,53 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.LinkedHashMap;
 import java.util.Objects;
 import java.util.stream.Collectors;
 import net.runelite.api.Client;
-import net.runelite.api.GameState;
 import net.runelite.api.NPC;
 import net.runelite.api.NPCComposition;
 import net.runelite.api.Player;
-import net.runelite.api.Skill;
 import net.runelite.api.WorldView;
 import net.runelite.api.coords.LocalPoint;
 import net.runelite.api.coords.WorldPoint;
-import net.runelite.api.gameval.VarPlayerID;
 
-/** Player, NPC and collision observations captured from one world view. */
 final class GenericClientWorldSnapshot
 {
-	final PlayerSnapshot player;
-	final List<NpcSnapshot> npcs;
+	final GenericClientPlayerSnapshot player;
+	final List<GenericClientPlayerSnapshot> players;
+	final List<GenericClientNpcSnapshot> npcs;
 	final GenericClientSceneCollision collision;
 
 	GenericClientWorldSnapshot(
-		PlayerSnapshot player,
-		List<NpcSnapshot> npcs,
+		GenericClientPlayerSnapshot player,
+		List<GenericClientNpcSnapshot> npcs,
 		GenericClientSceneCollision collision)
 	{
+		this(player,player == null ? List.of() : List.of(player),npcs,collision);
+	}
+
+	private GenericClientWorldSnapshot(GenericClientPlayerSnapshot player, List<GenericClientPlayerSnapshot> players,
+		List<GenericClientNpcSnapshot> npcs, GenericClientSceneCollision collision)
+	{
 		this.player = player;
-		this.npcs = Collections.unmodifiableList(new ArrayList<>(npcs));
+		this.players = List.copyOf(players);
+		this.npcs = List.copyOf(npcs);
 		this.collision = collision;
 	}
 
-	static GenericClientWorldSnapshot capture(Client client, Player localPlayer)
+	private static GenericClientWorldSnapshot empty()
+	{
+		return new GenericClientWorldSnapshot(
+			null, Collections.emptyList(), GenericClientSceneCollision.empty());
+	}
+	static GenericClientWorldSnapshot capture(Client client, Player localPlayer, GenericClientEntityIds identities)
 	{
 		if (localPlayer == null || localPlayer.getWorldLocation() == null)
 		{
-			return new GenericClientWorldSnapshot(null, Collections.emptyList(), GenericClientSceneCollision.empty());
+			return GenericClientWorldSnapshot.empty();
 		}
 		WorldPoint playerPoint = localPlayer.getWorldLocation();
 		WorldView worldView = localPlayer.getWorldView();
@@ -58,42 +67,37 @@ final class GenericClientWorldSnapshot
 				localDestination.getX(),
 				localDestination.getY(),
 				playerPoint.getPlane());
-		PlayerSnapshot player = new PlayerSnapshot(
-			Objects.toString(localPlayer.getName(), ""),
-			playerPoint.getX(),
-			playerPoint.getY(),
-			playerPoint.getPlane(),
-			worldView.getId(),
-			localPlayer.getAnimation(),
-			localPlayer.getInteracting() == null ? null : localPlayer.getInteracting().getName(),
-			client.getBoostedSkillLevel(Skill.HITPOINTS),
-			client.getRealSkillLevel(Skill.HITPOINTS),
-			client.getEnergy(),
-			client.getVarpValue(VarPlayerID.OPTION_RUN) == 1,
-			worldDestination);
+		GenericClientPlayerSnapshot player = GenericClientPlayerSnapshot.capture(client,localPlayer,identities,worldDestination,true);
+		List<GenericClientPlayerSnapshot> players = new ArrayList<>();
+		players.add(player);
+		for (Player other : worldView.players())
+		{
+			if (other == null || other == localPlayer || other.getWorldLocation() == null || other.getWorldLocation().getPlane() != playerPoint.getPlane()) continue;
+			players.add(GenericClientPlayerSnapshot.capture(client,other,identities,null,false));
+		}
 
 		Rectangle viewport = GenericClientMenuInput.viewportBounds(client);
-		List<NpcSnapshot> npcs = new ArrayList<>();
+		List<GenericClientNpcSnapshot> npcs = new ArrayList<>();
 		for (NPC npc : worldView.npcs())
 		{
-			NpcSnapshot snapshot = captureNpc(localPlayer, playerPoint, worldView, viewport, npc);
+			GenericClientNpcSnapshot snapshot = captureNpc(localPlayer, playerPoint, worldView, viewport, npc, identities);
 			if (snapshot != null)
 			{
 				npcs.add(snapshot);
 			}
 		}
 		npcs.sort(Comparator
-			.comparingInt(NpcSnapshot::getDistance)
-			.thenComparingInt(NpcSnapshot::getIndex));
-		return new GenericClientWorldSnapshot(player, npcs, collision);
+			.comparingInt(GenericClientNpcSnapshot::getDistance)
+			.thenComparingInt(GenericClientNpcSnapshot::getIndex));
+		return new GenericClientWorldSnapshot(player, players, npcs, collision);
 	}
 
-	private static NpcSnapshot captureNpc(
+	private static GenericClientNpcSnapshot captureNpc(
 		Player player,
 		WorldPoint playerPoint,
 		WorldView worldView,
 		Rectangle viewport,
-		NPC npc)
+		NPC npc, GenericClientEntityIds identities)
 	{
 		if (npc == null || npc.getWorldLocation() == null)
 		{
@@ -107,7 +111,8 @@ final class GenericClientWorldSnapshot
 			clickShape = npc.getCanvasTilePoly();
 		}
 		Point canvasPoint = GenericClientMenuInput.firstPointInside(clickShape, viewport);
-		return new NpcSnapshot(
+		return new GenericClientNpcSnapshot(
+			identities.identify(npc),
 			npc.getIndex(),
 			npc.getId(),
 			Objects.toString(npc.getName(), "<unnamed>"),
@@ -127,7 +132,7 @@ final class GenericClientWorldSnapshot
 			npc.getHealthRatio(),
 			npc.getHealthScale(),
 			canvasPoint,
-			visibleBounds(clickShape, viewport));
+			visibleBounds(clickShape, viewport),npc.getPoseAnimation() != npc.getIdlePoseAnimation());
 	}
 
 	private static NPCComposition getComposition(NPC npc)
@@ -161,330 +166,7 @@ final class GenericClientWorldSnapshot
 		return bounds.isEmpty() ? null : bounds;
 	}
 
-	static final class PlayerSnapshot
-	{
-		final String name;
-		final int x;
-		final int y;
-		final int plane;
-		private final int worldViewId;
-		private final int animation;
-		private final String interacting;
-		final int currentHitpoints;
-		final int maxHitpoints;
-		final int runEnergy;
-		final boolean runEnabled;
-		private final WorldPoint destination;
-
-		PlayerSnapshot(String name, int x, int y, int plane, int worldViewId)
-		{
-			this(name, x, y, plane, worldViewId, -1, null, 0, 0, 0, false, null);
-		}
-
-		PlayerSnapshot(
-			String name,
-			int x,
-			int y,
-			int plane,
-			int worldViewId,
-			int animation,
-			String interacting)
-		{
-			this(
-				name,
-				x,
-				y,
-				plane,
-				worldViewId,
-				animation,
-				interacting,
-				0,
-				0,
-				0,
-				false,
-				null);
-		}
-
-		PlayerSnapshot(
-			String name,
-			int x,
-			int y,
-			int plane,
-			int worldViewId,
-			int animation,
-			String interacting,
-			int currentHitpoints,
-			int maxHitpoints,
-			int runEnergy,
-			boolean runEnabled,
-			WorldPoint destination)
-		{
-			this.name = name;
-			this.x = x;
-			this.y = y;
-			this.plane = plane;
-			this.worldViewId = worldViewId;
-			this.animation = animation;
-			this.interacting = interacting;
-			this.currentHitpoints = currentHitpoints;
-			this.maxHitpoints = maxHitpoints;
-			this.runEnergy = runEnergy;
-			this.runEnabled = runEnabled;
-			this.destination = destination;
-		}
-
-		Map<String, Object> toMap(String gameState)
-		{
-			Map<String, Object> value = new LinkedHashMap<>();
-			value.put("logged_in", GameState.LOGGED_IN.name().equals(gameState));
-			value.put("name", name);
-			value.put("world", worldMap(x, y, plane));
-			value.put("world_view", (long) worldViewId);
-			value.put("animation", (long) animation);
-			value.put("interacting", interacting);
-			value.put("current_hitpoints", (long) currentHitpoints);
-			value.put("max_hitpoints", (long) maxHitpoints);
-			value.put("run_energy", (long) runEnergy);
-			value.put("run_enabled", runEnabled);
-			value.put("destination", destination == null
-				? null
-				: worldMap(destination.getX(), destination.getY(), destination.getPlane()));
-			return value;
-		}
-
-		String getName()
-		{
-			return name;
-		}
-
-		int getWorldViewId() { return worldViewId; }
-
-		String worldPoint()
-		{
-			return x + "," + y + "," + plane;
-		}
-	}
-
-	static final class NpcSnapshot
-	{
-		private final int index;
-		final int id;
-		final String name;
-		final int x;
-		final int y;
-		final int plane;
-		final int distance;
-		private final int combatLevel;
-		private final int animation;
-		private final String interacting;
-		private final int size;
-		final List<String> actions;
-		private final boolean inScene;
-		final boolean clickable;
-		final boolean lineOfSight;
-		final boolean dead;
-		private final int healthRatio;
-		private final int healthScale;
-		private final Point canvasPoint;
-		private final Rectangle canvasBounds;
-
-		NpcSnapshot(
-			int index,
-			int id,
-			String name,
-			int x,
-			int y,
-			int plane,
-			int distance,
-			int combatLevel,
-			int animation,
-			String interacting,
-			List<String> actions)
-		{
-			this(
-				index,
-				id,
-				name,
-				x,
-				y,
-				plane,
-				distance,
-				combatLevel,
-				animation,
-				interacting,
-				1,
-				actions,
-				false,
-				false,
-				false,
-				false,
-				-1,
-				-1,
-				null,
-				null);
-		}
-
-		NpcSnapshot(
-			int index,
-			int id,
-			String name,
-			int x,
-			int y,
-			int plane,
-			int distance,
-			int combatLevel,
-			int animation,
-			String interacting,
-			int size,
-			List<String> actions)
-		{
-			this(
-				index,
-				id,
-				name,
-				x,
-				y,
-				plane,
-				distance,
-				combatLevel,
-				animation,
-				interacting,
-				size,
-				actions,
-				false,
-				false,
-				false,
-				false,
-				-1,
-				-1,
-				null,
-				null);
-		}
-
-		NpcSnapshot(
-			int index,
-			int id,
-			String name,
-			int x,
-			int y,
-			int plane,
-			int distance,
-			int combatLevel,
-			int animation,
-			String interacting,
-			int size,
-			List<String> actions,
-			boolean inScene,
-			boolean clickable,
-			boolean lineOfSight,
-			boolean dead,
-			int healthRatio,
-			int healthScale,
-			Point canvasPoint,
-			Rectangle canvasBounds)
-		{
-			this.index = index;
-			this.id = id;
-			this.name = name;
-			this.x = x;
-			this.y = y;
-			this.plane = plane;
-			this.distance = distance;
-			this.combatLevel = combatLevel;
-			this.animation = animation;
-			this.interacting = interacting;
-			this.size = size;
-			this.actions = Collections.unmodifiableList(new ArrayList<>(actions));
-			this.inScene = inScene;
-			this.clickable = clickable;
-			this.lineOfSight = lineOfSight;
-			this.dead = dead;
-			this.healthRatio = healthRatio;
-			this.healthScale = healthScale;
-			this.canvasPoint = canvasPoint == null ? null : new Point(canvasPoint);
-			this.canvasBounds = canvasBounds == null ? null : new Rectangle(canvasBounds);
-		}
-
-		int getIndex()
-		{
-			return index;
-		}
-
-		int getDistance()
-		{
-			return distance;
-		}
-
-		int getId()
-		{
-			return id;
-		}
-
-		String getName()
-		{
-			return name;
-		}
-
-		int getCombatLevel()
-		{
-			return combatLevel;
-		}
-
-		int getAnimation()
-		{
-			return animation;
-		}
-
-		String getInteracting()
-		{
-			return interacting;
-		}
-
-		int getSize()
-		{
-			return size;
-		}
-
-		WorldPoint getWorldPoint()
-		{
-			return new WorldPoint(x, y, plane);
-		}
-
-		boolean isDead()
-		{
-			return dead;
-		}
-
-		Map<String, Object> toMap()
-		{
-			Map<String, Object> value = new LinkedHashMap<>();
-			value.put("index", (long) index);
-			value.put("id", (long) id);
-			value.put("name", name);
-			value.put("world", worldMap(x, y, plane));
-			value.put("distance", (long) distance);
-			value.put("combat_level", (long) combatLevel);
-			value.put("animation", (long) animation);
-			value.put("interacting", interacting);
-			value.put("size", (long) size);
-			value.put("actions", actions);
-			value.put("in_scene", inScene);
-			value.put("clickable", clickable);
-			value.put("line_of_sight", lineOfSight);
-			value.put("dead", dead);
-			value.put("health_ratio", (long) healthRatio);
-			value.put("health_scale", (long) healthScale);
-			value.put("canvas", canvasMap(canvasPoint, canvasBounds));
-			return value;
-		}
-
-		String worldPoint()
-		{
-			return x + "," + y + "," + plane;
-		}
-	}
-
-	private static Map<String, Object> canvasMap(Point point, Rectangle bounds)
+	static Map<String, Object> canvasMap(Point point, Rectangle bounds)
 	{
 		Map<String, Object> canvas = new LinkedHashMap<>();
 		if (point == null)
